[package]
name = "underscore_args"
version = "0.1.2"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["underscore", "arguments", "named", "syntax"]
description = "Macro for underscore named argument syntax, aka Dyon"
license = "MIT"
repository = "https://github.com/PistonDevelopers/underscore_args.git"
homepage = "https://github.com/PistonDevelopers/underscore_args"
documentation = "https://docs.rs/underscore_args"
readme = "README.md"

[dependencies]
